--- a/package.json
+++ b/package.json
@@ -9,19 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.48.0",
+    "axios": "^1.7.9",
+    "babel-preset-expo": "^12.0.6",
     "expo": "^52.0.16",
     "expo-constants": "~17.0.2",
     "expo-linking": "~7.0.2",
     "expo-router": "~4.0.2",
+    "expo-speech": "^13.0.1",
     "expo-splash-screen": "~0.29.7",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.6"
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-web": "~0.19.6",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-av": "~15.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
